--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,26 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 .App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-decoration: none;
+  background-color: rgb(247, 233, 158);
   font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid grey;
 }
 
-.App-main{
-  display:  flex;
+.header-text{
+  text-decoration: none;
+  color: rgb(12, 18, 43);
 }
 
 .App-sidebar{
-  min-width: 25%;
+  width: 25%;
+  min-width: 150px;
+  margin-top: 100px;
+}
+.App-main{
+  border: 1px solid grey;
+  width: 75%;
 }
