--- a/src/notePage/notePage.css
+++ b/src/notePage/notePage.css
@@ -1,3 +1,42 @@
+.Note{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(247, 233, 158);
+    padding: 10px;
+    box-shadow: 2px 2px 5px #3d3d3da8;
+}
+.note-header{
+    display: flex;
+    width: 80%;
+    align-content: space-between;
+    align-items: center;
+    align-self: center;
+}
+.go-back-btn{
+    width: 20%;
+    align-self: flex-start;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bolder;
+    background-color: rgb(31, 33, 131);
+    color: white;
+    outline: none;
+    border: none;
+}
+.note-header-text{
+    width: 60%;
+}
+.delete-btn{
+    width: 20%;
+    align-self: flex-start;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bolder;
+    background-color: rgb(31, 33, 131);
+    color: white;
+    outline: none;
+    border: none;
+}
 .note-content{
     margin: 15px 30px;
 }
