--- a/src/addNote/AddNote.css
+++ b/src/addNote/AddNote.css
@@ -1,18 +1,20 @@
-.Note{
-    display: flex;
-    flex-direction: column;
+.AddNote{
     background-color: rgb(247, 233, 158);
-    padding: 10px;
-    box-shadow: 2px 2px 5px #3d3d3da8;
+    padding: 20px 0px;
 }
-.note-header{
-    display: flex;
-    width: 80%;
-    align-content: space-between;
-    align-items: center;
-    align-self: center;
+label{
+    padding: 5px;
+    margin: 5px;
 }
-.go-back-btn{
+input[type='text']{
+    margin: 5px;
+    padding: 5px;
+}
+select{
+    margin: 5px;
+    padding: 5px;
+}
+.addNote-cancel-btn{
     min-width: 90px;
     width: 20%;
     align-self: flex-start;
@@ -23,11 +25,9 @@
     color: white;
     outline: none;
     border: none;
+    margin: 5px 10px;
 }
-.note-header-text{
-    width: 60%;
-}
-.delete-btn{
+.addNote-submit-btn{
     min-width: 90px;
     width: 20%;
     align-self: flex-start;
@@ -38,11 +38,9 @@
     color: white;
     outline: none;
     border: none;
+    margin: 5px 10px;
 }
-.delete-btn:hover, .go-back-btn:hover{
+.addNote-cancel-btn:hover, .addNote-submit-btn:hover{
     cursor: pointer;
     background-color: rgb(71, 73, 189);
-}
-.note-content{
-    margin: 15px 30px;
 }
