--- a/src/noteList/noteList.css
+++ b/src/noteList/noteList.css
@@ -18,8 +18,14 @@
     padding: 5px;
     box-shadow: 2px 2px 5px #3d3d3da8;
 }
+.note:hover{
+    background-color: rgb(245, 220, 77);
+}
 .add-note-btn{
     background-color: rgb(247, 233, 158);
     font-size: 18px;
     font-weight: bolder;
+}
+.add-note-btn:hover{
+    cursor: pointer;
 }
