--- a/src/addNote/AddNote.css
+++ b/src/addNote/AddNote.css
@@ -26,6 +26,7 @@ select{
     outline: none;
     border: none;
     margin: 5px 10px;
+    min-width: 92px;
 }
 .addNote-submit-btn{
     min-width: 90px;
@@ -39,6 +40,7 @@ select{
     outline: none;
     border: none;
     margin: 5px 10px;
+    min-width: 92px;
 }
 .addNote-cancel-btn:hover, .addNote-submit-btn:hover{
     cursor: pointer;
