--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -1,29 +1,40 @@
 
 .folder-list{
+    margin-left: -20px;
     list-style: none;
     color: black;
-    margin-left: -30px;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
 }
 .folder{
-    text-align: left;
-    padding: 10px 25px 10px 15px;
-    margin: 15px;
-    text-decoration: none !important;
+    color: rgb(0, 15, 73);
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
     border-left: 1px solid grey;
     border-radius: 5px 0px 0px 5px;
-    margin-right: 0px;
-    margin-left: 30%;
-    font-size: 20px;
-    font-weight: bolder;
-    background-color: #A2CC66;
-    color: rgb(0, 15, 73);
+    min-width: 125px;
+    max-width:220px;
+    width: 100%;
+    margin: 1px 0px 16px auto;
+    overflow: hidden;
+    display: flex;
 }
-.folder:hover{
+.folder-NavLink:hover{
     background-color: rgb(211, 248, 160);
 }
 .folder-NavLink{
+    padding: 10px 3px 10px 15px;
+    margin: 0px;
+    text-align: left;
+    width: 100%;
+    min-width: 125px;
+    max-width:220px;
+    text-decoration: none !important;
+    font-size: 20px;
+    font-weight: bolder;
+    background-color: #A2CC66;
     color: rgb(0, 15, 73);
 }
 .activeNavLink > .folder{
