--- a/src/notePage/notePage.css
+++ b/src/notePage/notePage.css
@@ -1,4 +1,4 @@
-.Note{
+.note-container{
     display: flex;
     flex-direction: column;
     background-color: rgb(247, 233, 158);
@@ -12,22 +12,10 @@
     align-items: center;
     align-self: center;
 }
-.go-back-btn{
-    min-width: 90px;
-    width: 20%;
-    align-self: flex-start;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bolder;
-    background-color: rgb(31, 33, 131);
-    color: white;
-    outline: none;
-    border: none;
-}
 .note-header-text{
     width: 60%;
 }
-.delete-btn{
+button{
     min-width: 90px;
     width: 20%;
     align-self: flex-start;
@@ -39,7 +27,7 @@
     outline: none;
     border: none;
 }
-.delete-btn:hover, .go-back-btn:hover{
+button:hover{
     cursor: pointer;
     background-color: rgb(71, 73, 189);
 }
