--- a/src/notePage/notePage.css
+++ b/src/notePage/notePage.css
@@ -1,18 +1,18 @@
 .note-container{
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     background-color: rgb(247, 233, 158);
     padding: 10px;
     box-shadow: 2px 2px 5px #3d3d3da8;
+    justify-content: center;
 }
 .note-header{
     display: flex;
-    width: 80%;
-    align-content: space-between;
+    justify-content: center;
     align-items: center;
-    align-self: center;
 }
 .note-header-text{
+    text-align: center;
     width: 60%;
 }
 button{
